# BabyCare

./: .gitignore  README.md
backend/: README.md  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/: rooms.py  router.py
backend/app/api/v1/: auth.py  babies.py  feeding.py  iot.py  llm.py  router.py
backend/app/core/: config.py
backend/app/modules/feeding/application/: use_cases.py
backend/app/modules/feeding/domain/: entities.py
backend/app/modules/iot/application/: use_cases.py
backend/app/modules/iot/domain/: entities.py
backend/app/schemas/: auth.py  baby.py  common.py  feeding.py  iot.py  llm.py  rooms.py
backend/docs/: ddd.md
backend/tests/: test_app.py  test_iot.py  test_rooms.py
docs/: architecture.md
web/: README.md  index.html  package.json
web/src/: styles.css
web/src/api/: album.ts  dashboard.ts  family.ts  reports.ts  timeline.ts
web/src/app/: App.tsx
web/src/components/layout/: TopNav.tsx
web/src/components/ui/: SectionHeader.tsx  SummaryCard.tsx
web/src/pages/: DashboardPage.tsx  FamilySharePage.tsx  PhotoAlbumPage.tsx  ReportsPage.tsx  TimelinePage.tsx
web/src/types/: album.ts  dashboard.ts  family.ts  reports.ts  timeline.ts
